User table,repository done,Usertest done